<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signup.SignUpFragment">

    <data>

        <variable
            name="viewModel"
            type="com.cody.pokeapp.ui.signup.SignUpViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="@dimen/splash_logo"
                android:layout_height="@dimen/splash_logo"
                android:contentDescription="@string/description_logo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_l"
                android:layout_marginTop="@dimen/margin_xxl"
                android:autofillHints="@string/hint_email"
                android:background="@drawable/white_background"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/padding_xs"
                android:paddingVertical="@dimen/padding"
                android:text="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <ImageView
                android:id="@+id/image_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_l"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/description_divider"
                android:src="@drawable/gray_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_l"
                android:layout_marginTop="@dimen/margin"
                android:autofillHints="@string/hint_password"
                android:background="@drawable/white_background"
                android:hint="@string/hint_password_with_instruction"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingHorizontal="@dimen/padding_xs"
                android:paddingVertical="@dimen/padding"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_divider" />

            <Button
                android:id="@+id/action_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_l"
                android:layout_marginTop="@dimen/margin_l"
                android:paddingHorizontal="@dimen/padding"
                android:paddingVertical="@dimen/padding_l"
                android:text="@string/action_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_password"
                app:signUpEmail="@{viewModel.email}"
                app:signUpPassword="@{viewModel.password}" />

            <Button
                android:id="@+id/action_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_l"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_xxl"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/action_login"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/action_sign_up"
                app:layout_constraintVertical_bias="0" />

            <ProgressBar
                android:id="@+id/progressbar_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_l"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:signUpState="@{viewModel.signUpState}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>